Refactor to modules

--- a/.sample.env
+++ b/.sample.env
@@ -6,7 +6,8 @@ GROUPCHAT_NAME=
 RABBITMQ_HOST=
 RABBITMQ_USER=
 RABBITMQ_PASS=
-GROUPME_QUEUE=
+RABBITMQ_EXCHANGE=
+ACK_URL=
 
 # GroupMe
 GROUPME_BOT_ID=
